--- a/public/css/sass/abstracts/_variables.scss
+++ b/public/css/sass/abstracts/_variables.scss
@@ -7,9 +7,9 @@
     // pour changer le theme mettre true à celui choisi et false aux reste
     
     
-        $blueTheme : false ;
+        $blueTheme : true ;
         $orangeTheme :false  ; 
-        $greenTheme :true  ;
+        $greenTheme :false  ;
         
    
       
