--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -18,7 +18,7 @@
     content: "";
     border: 40px solid rgba(78, 130, 151, 0.3);
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
-    border-radius: 50%;
+	@include border-radius(50%);
     height: 180px;
     width: 180px;
     position: absolute;
@@ -118,7 +118,7 @@
 
 .profile-img img {
     position: relative;
-    border-radius: 50%;
+	@include border-radius(50%);
     height: 180px;
     width: 180px;
     padding: 0;
@@ -210,7 +210,7 @@
 	.wrapper .icon {
 	  position: relative;
 	  background-color: #ffffff;
-	  border-radius: 50%;
+	  @include border-radius(50%);
 	  padding: 15px;
 	  margin: 10px;
 	  width: 50px;
@@ -232,7 +232,8 @@
 	  background-color: #ffffff;
 	  color: #ffffff;
 	  padding: 5px 8px;
-	  border-radius: 5px;
+	  @include border-radius(5px);
+
 	  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
 	  opacity: 0;
 	  pointer-events: none;
@@ -308,7 +309,8 @@
 	// border: 1px solid red;
 	// width: 20px;
 	// height: 20px;
-	border-radius: 100%;
+	@include border-radius(50%);
+
 	position: absolute;
 	background: rgb(39,91,122);
 	background: -moz-radial-gradient(circle, rgba(39,91,122,1) 0%, rgba(255,255,255,1) 83%);
