--- a/public/css/main.css
+++ b/public/css/main.css
@@ -674,80 +674,149 @@ a.active:not(.logo) {
   opacity: 0.3;
 }
 
-.progress-bar {
-  margin: 0 0 10px;
-  overflow: hidden;
-  padding-right: 24px;
-  /* Separate bars from container */
+*,
+*:before,
+*:after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.progress-title-holder {
-  padding-bottom: 7px;
+.skills-bar-container {
+  width: 40%;
+  min-width: 300px;
+  list-style: none;
+}
+
+.skills-bar-container li {
   position: relative;
-  margin: 5px 0;
-  font-family: Montserrat, sans-serif;
-  font-size: 15px;
-  line-height: 15px;
-  font-weight: 400;
-  color: #2e2e2e;
-}
-
-.progress-title {
-  z-index: 100;
-}
-
-.progress-number-wrapper {
   width: 100%;
-  z-index: 10;
+  padding: 5px;
+  margin-bottom: 10px;
 }
 
-.progress-number-mark {
-  margin-bottom: 4px;
-  border-radius: 3px;
-  background-color: #16171d;
-  padding: 0 8px;
+.skills-bar-container li .progressbar-title {
+  color: #302f2f;
+  font-size: 15px;
+}
+
+.skills-bar-container li .progressbar-title h3 {
+  display: inline-block;
+}
+
+.skills-bar-container li .progressbar-title .percent {
   position: absolute;
-  bottom: 0;
-  transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  -webkit-transform: translateX(-50%);
+  right: 5px;
 }
 
-.progress-number-wrapper,
-.progress-number-mark {
-  font-family: Open Sans, sans-serif;
-  font-size: 11px;
-  line-height: 24px;
-  height: 24px;
-  letter-spacing: 0px;
-  font-weight: 600;
-  font-style: normal;
-  text-transform: none;
-  color: #ffffff;
+.skills-bar-container li .bar-container {
+  background: #555;
+  position: relative;
+  width: 100%;
+  height: 5px;
+  margin-top: 5px;
+  display: block;
+  border-radius: 5px;
 }
 
-.down-arrow {
-  border-left: 3px solid transparent;
-  border-right: 3px solid transparent;
-  border-top: 3px solid #16171d;
+.skills-bar-container li .bar-container .progressbar {
   position: absolute;
-  left: 50%;
-  top: 100%;
-  transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  -webkit-transform: translateX(-50%);
-}
-
-.progress-content-outter {
-  height: 12px;
-  background-color: #ffffff;
-}
-
-.progress-content {
-  height: 21px;
-  background-color: rgba(67, 243, 183, 0.92);
   width: 0%;
-  /* Initial value */
+  height: 100%;
+  border-radius: 5px;
+  animation-duration: 2s;
+  animation-timing-function: ease-out;
+  animation-fill-mode: both;
+}
+
+.skills-bar-container li .bar-container #progress-html {
+  animation-name: progress-html;
+  animation-delay: 0.7s;
+}
+
+.skills-bar-container li .bar-container #progress-css {
+  animation-name: progress-css;
+  animation-delay: 1.4s;
+}
+
+.skills-bar-container li .bar-container #progress-javascript {
+  animation-name: progress-javascript;
+  animation-delay: 2.1s;
+}
+
+.skills-bar-container li .bar-container #progress-php {
+  animation-name: progress-php;
+  animation-delay: 2.8s;
+}
+
+.skills-bar-container li .bar-container #progress-react {
+  animation-name: progress-react;
+  animation-delay: 3.5s;
+}
+
+.progressred {
+  background-color: #c0392b;
+}
+
+.progressblue {
+  background-color: #1199ff;
+}
+
+.progresspurple {
+  background-color: #9b59b6;
+}
+
+.progressorange {
+  background-color: #ffa500;
+}
+
+.progressgreen {
+  background-color: #27ae60;
+}
+
+@keyframes progress-html {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@keyframes progress-css {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 90%;
+  }
+}
+
+@keyframes progress-javascript {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 70%;
+  }
+}
+
+@keyframes progress-php {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 55%;
+  }
+}
+
+@keyframes progress-react {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 65%;
+  }
 }
 
 .cardbg {
