--- a/public/css/sass/layouts/_skills.scss
+++ b/public/css/sass/layouts/_skills.scss
@@ -20,22 +20,13 @@ $animation-delay: .7s;
 
 
 
-*,
-*:before,
-*:after{
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
 
 .skills-bar-container{
-    
-//   position: relative;
+  font-size: 20px;
   width: 40%;
   min-width: 300px;
   list-style:none;
+  margin: 30px 50px;
   
   li{
     position: relative;
