--- a/public/css/sass/bases/_reset.scss
+++ b/public/css/sass/bases/_reset.scss
@@ -5,7 +5,7 @@
     font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-    box-sizing: border-box;
+ 
     // border: 1px solid red;   
 }
 body {
@@ -24,3 +24,12 @@ img {
   }
 
  
+
+*,
+*:before,
+*:after{
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
