--- a/public/css/sass/abstracts/_variables.scss
+++ b/public/css/sass/abstracts/_variables.scss
@@ -1,18 +1,9 @@
     
-    /*
-    |-------------------------------|
-    |-------theme parametres--------|
-    |-------------------------------|
-    */
-    // pour changer le theme mettre true à celui choisi et false aux reste
-    
-    
-        $blueTheme : true ;
-        $orangeTheme :false  ; 
-        $greenTheme :false  ;
         
-   
+   //include theme
+   @import "./_themes.js";
       
+   
     //color by default 
     $color-profile2:#1380a1;
     $color-profile3: rgb(3, 188, 245);
