--- a/public/css/main.css
+++ b/public/css/main.css
@@ -724,6 +724,7 @@ a.active:not(.logo) {
 }
 
 .skills-bar-container li .bar-container .progressbar {
+  background-color: #007ba0;
   position: absolute;
   width: 0%;
   height: 100%;
@@ -756,26 +757,6 @@ a.active:not(.logo) {
 .skills-bar-container li .bar-container #progress-react {
   animation-name: progress-react;
   animation-delay: 3.5s;
-}
-
-.progressred {
-  background-color: #c0392b;
-}
-
-.progressblue {
-  background-color: #1199ff;
-}
-
-.progresspurple {
-  background-color: #9b59b6;
-}
-
-.progressorange {
-  background-color: #ffa500;
-}
-
-.progressgreen {
-  background-color: #27ae60;
 }
 
 @keyframes progress-html {
