--- a/public/css/sass/layouts/_skills.scss
+++ b/public/css/sass/layouts/_skills.scss
@@ -6,12 +6,6 @@ $percentPhp: 65%;
 $percentReact: 70%;
 
 
-// //color of kills
-// $red: #c0392b;
-// $blue: #1199ff;
-// $purple: #9b59b6;
-// $orange: #ffa500;
-// $green: #27ae60;
 
 
 $li-padding: 5px;
@@ -50,7 +44,8 @@ flex-wrap: wrap;
     }// end progressbar-title
     
     .bar-container{
-      background: #555;
+      background-color: $color-profile2;
+      opacity: .2;
       position: relative;
       width: 100%;
       height: 5px;
