--- a/public/css/main.css
+++ b/public/css/main.css
@@ -714,8 +714,7 @@ a.active:not(.logo) {
 }
 
 .skills-bar-container li .bar-container {
-  background-color: #007ba0;
-  opacity: .2;
+  background-color: rgba(0, 123, 160, 0.5);
   position: relative;
   width: 100%;
   height: 5px;
