--- a/public/css/main.css
+++ b/public/css/main.css
@@ -183,7 +183,7 @@ h4, .logo {
 }
 
 .navbar a.logo::after {
-  content: url(../../../../public/images/logoBlue.png);
+  content: url(../../../../public/images/logoOrange.png);
 }
 
 .navbar li {
@@ -208,14 +208,14 @@ h4, .logo {
   left: 0;
   width: 100%;
   height: 3px;
-  background-color: #007ba0;
+  background-color: #bd8a0a;
   transform: scaleX(0);
   transform-origin: right;
   transition: all 0.5s;
 }
 
 .navbar li a:hover {
-  color: #007ba0;
+  color: #bd8a0a;
 }
 
 .navbar li a:hover::after {
@@ -224,7 +224,7 @@ h4, .logo {
 }
 
 a.active:not(.logo) {
-  color: #007ba0;
+  color: #bd8a0a;
 }
 
 .invisible {
@@ -232,11 +232,13 @@ a.active:not(.logo) {
 }
 
 .scrolled {
-  background-image: linear-gradient(90deg, #00151f 10%, #002b3f 30%, #03bcf5 50%);
+  background-image: linear-gradient(90deg, #221d00 10%, #504400 30%, #dbb406 50%);
 }
 
 .parallax-window {
   max-height: 100vh;
+  background-color: #dbb406;
+  opacity: 0.2;
 }
 
 .profile-img a {
@@ -298,7 +300,7 @@ a.active:not(.logo) {
   margin: 0 auto;
   color: white;
   /* Clip Background Image */
-  background: url("../../../../public/images/animated-text-fill-blue.png") repeat-y;
+  background: url("../../../../public/images/animated-text-fill-orange.png") repeat-y;
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -367,7 +369,7 @@ a.active:not(.logo) {
 }
 
 .twoButtons div:hover a {
-  color: #007ba0;
+  color: #bd8a0a;
   opacity: 1;
 }
 
@@ -383,7 +385,7 @@ a.active:not(.logo) {
   display: flex;
   justify-content: center;
   top: 80px;
-  color: #007ba0;
+  color: #bd8a0a;
   opacity: .6;
   font-weight: bold;
   line-height: 20px;
@@ -714,7 +716,7 @@ a.active:not(.logo) {
 }
 
 .skills-bar-container li .bar-container {
-  background-color: rgba(0, 123, 160, 0.5);
+  background-color: rgba(189, 138, 10, 0.5);
   position: relative;
   width: 100%;
   height: 5px;
@@ -724,7 +726,7 @@ a.active:not(.logo) {
 }
 
 .skills-bar-container li .bar-container .progressbar {
-  background-color: #007ba0;
+  background-color: #bd8a0a;
   position: absolute;
   width: 0%;
   height: 100%;
@@ -805,7 +807,7 @@ a.active:not(.logo) {
 }
 
 .cardbg {
-  background-color: #007ba0 !important;
+  background-color: #bd8a0a !important;
 }
 
 @media only screen and (min-width: 992px) {
@@ -827,7 +829,7 @@ a.active:not(.logo) {
 /* Firefox */
 * {
   scrollbar-width: auto;
-  scrollbar-color: #007ba0 #ffffff;
+  scrollbar-color: #bd8a0a #ffffff;
 }
 
 /* Chrome, Edge, and Safari */
@@ -840,7 +842,7 @@ a.active:not(.logo) {
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: #007ba0;
+  background-color: #bd8a0a;
   border-radius: 10px;
   border: 3px solid #ffffff;
   transition: all .3s  ease-in;
@@ -848,7 +850,7 @@ a.active:not(.logo) {
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #03bcf5;
+  background: #dbb406;
 }
 
 /*--------------------------------------------------------------
@@ -862,7 +864,7 @@ a.active:not(.logo) {
   border-radius: 50px;
   right: 15px;
   bottom: 15px;
-  background: #007ba0;
+  background: #bd8a0a;
   color: white;
   transition: all 0.5s ease-in-out;
   z-index: 50;
@@ -876,7 +878,7 @@ a.active:not(.logo) {
 }
 
 .back-to-top:hover {
-  background: #03bcf5;
+  background: #dbb406;
 }
 
 .flexrow {
@@ -894,6 +896,6 @@ a.active:not(.logo) {
 }
 
 .title {
-  color: #007ba0;
+  color: #bd8a0a;
 }
 /*# sourceMappingURL=main.css.map */
