--- a/public/css/sass/main.scss
+++ b/public/css/sass/main.scss
@@ -8,7 +8,7 @@
 "bases/typography";
 /////////////////////////
 //Components
-@import "components/card";
+@import "components/social";
 /////////////////////////
 //Layouts
 @import "layouts/layouts";
