--- a/public/css/sass/components/_social.scss
+++ b/public/css/sass/components/_social.scss
@@ -7,99 +7,109 @@
 		font-family: "Poppins", sans-serif;
 	  display: flex;
 	  justify-content: center;
+
+      .icon {
+        position: relative;
+        background-color: #ffffff;
+        @include border-radius(50%);
+        padding: 15px;
+        margin: 10px;
+        width: 50px;
+        height: 50px;
+        font-size: 18px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+        cursor: pointer;
+        transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+      }
+
+      .tooltip {
+        position: absolute;
+        top: 0;
+        font-size: 14px;
+        background-color: #ffffff;
+        color: #ffffff;
+        padding: 5px 8px;
+        @include border-radius(5px);
+        box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+        opacity: 0;
+        pointer-events: none;
+        transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        &::before {
+            position: absolute;
+            content: "";
+            height: 8px;
+            width: 8px;
+            background-color: #ffffff;
+            bottom: -3px;
+            left: 50%;
+            transform: translate(-50%) rotate(45deg);
+            transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+          }
+      }
+
+      
+
+      .icon:hover .tooltip {
+        top: -45px;
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
+      }
+
+      .icon:hover span,
+	  .icon:hover .tooltip {
+	  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.1);
+	  }
+
+      .facebook:hover,
+	  .facebook:hover .tooltip,
+	  .facebook:hover .tooltip::before {
+	  background-color: #3b5999;
+	  color: #ffffff;
+	  }
+
+      .twitter:hover,
+	  .twitter:hover .tooltip,
+	  .twitter:hover .tooltip::before {
+	  background-color: #46c1f6;
+	  color: #ffffff;
+	  }
+      
+	  .instagram:hover,
+	  .instagram:hover .tooltip,
+	  .instagram:hover .tooltip::before {
+	  background-color: #e1306c;
+	  color: #ffffff;
+	  }
+	
+	  .github:hover,
+	  .github:hover .tooltip,
+	  .github:hover .tooltip::before {
+	  background-color: #333333;
+	  color: #ffffff;
+	}
+	
+	  .youtube:hover,
+	  .youtube:hover .tooltip,
+	  .youtube:hover .tooltip::before {
+	  background-color: #de463b;
+	  color: #ffffff;
+	}
+
 	 
 	  
 	  
 	}
 	
-	.wrapper .icon {
-	  position: relative;
-	  background-color: #ffffff;
-	  @include border-radius(50%);
-	  padding: 15px;
-	  margin: 10px;
-	  width: 50px;
-	  height: 50px;
-	  font-size: 18px;
-	  display: flex;
-	  justify-content: center;
-	  align-items: center;
-	  flex-direction: column;
-	  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
-	  cursor: pointer;
-	  transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-	}
 	
-	.wrapper .tooltip {
-	  position: absolute;
-	  top: 0;
-	  font-size: 14px;
-	  background-color: #ffffff;
-	  color: #ffffff;
-	  padding: 5px 8px;
-	  @include border-radius(5px);
-
-	  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
-	  opacity: 0;
-	  pointer-events: none;
-	  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-	}
 	
-	.wrapper .tooltip::before {
-	  position: absolute;
-	  content: "";
-	  height: 8px;
-	  width: 8px;
-	  background-color: #ffffff;
-	  bottom: -3px;
-	  left: 50%;
-	  transform: translate(-50%) rotate(45deg);
-	  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-	}
 	
-	.wrapper .icon:hover .tooltip {
-	  top: -45px;
-	  opacity: 1;
-	  visibility: visible;
-	  pointer-events: auto;
-	}
 	
-	.wrapper .icon:hover span,
-	.wrapper .icon:hover .tooltip {
-	  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.1);
-	}
 	
-	.wrapper .facebook:hover,
-	.wrapper .facebook:hover .tooltip,
-	.wrapper .facebook:hover .tooltip::before {
-	  background-color: #3b5999;
-	  color: #ffffff;
-	}
 	
-	.wrapper .twitter:hover,
-	.wrapper .twitter:hover .tooltip,
-	.wrapper .twitter:hover .tooltip::before {
-	  background-color: #46c1f6;
-	  color: #ffffff;
-	}
+	  
 	
-	.wrapper .instagram:hover,
-	.wrapper .instagram:hover .tooltip,
-	.wrapper .instagram:hover .tooltip::before {
-	  background-color: #e1306c;
-	  color: #ffffff;
-	}
-	
-	.wrapper .github:hover,
-	.wrapper .github:hover .tooltip,
-	.wrapper .github:hover .tooltip::before {
-	  background-color: #333333;
-	  color: #ffffff;
-	}
-	
-	.wrapper .youtube:hover,
-	.wrapper .youtube:hover .tooltip,
-	.wrapper .youtube:hover .tooltip::before {
-	  background-color: #de463b;
-	  color: #ffffff;
-	}
