--- a/public/css/sass/abstracts/_variables.scss
+++ b/public/css/sass/abstracts/_variables.scss
@@ -123,5 +123,22 @@
     $height3:31px;
     $height4:26px;
     $height5:23px;
-    $height6:21px
+    $height6:21px;
     
+
+    //Variables of kills.scs
+    $percentHtml: 98%;
+    $percentCss: 95%;
+    $percentJavascript: 75%;
+    $percentBootstrap: 80%;
+    $percentPhotoshop: 65%;
+    $percentReact : 65%;
+    $percentPhp: 70%;
+    $percentWordpress: 70%;
+    $percentAsp : 55%;
+    $percentSql : 65%;
+
+    $li-padding: 5px;
+
+    $animation-delay: .7s;
+    $animation-duration : 2s;
